codama-macros/tests/codama_attribute/type_nodes/number_type_node/invalid_format.fail.stderr
error: invalid format
 --> tests/codama_attribute/type_nodes/number_type_node/invalid_format.fail.rs:3:33
  |
3 | #[codama(type = number(format = invalid))]
  |                                 ^^^^^^^
