codama-macros/tests/codama_attribute/type_nodes/number_type_node/invalid_format.fail.rs
use codama::codama;

#[codama(type = number(format = invalid))]
pub struct Test;

fn main() {}
